[metadata]
name = neato
version = 1.0.0
author = Seph (Joseph) Pace
author_email = sephpace@gmail.com
description = An implementation of NEAT (NeuroEvolution of Augmenting Topologies) by Kenneth O. Stanley
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/sephpace/neato
project_urls = 
    Bug Tracker = https://github.com/sephpace/neato/issues
classifiers =  
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    =src
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
    numpy

[options.packages.find]
where = src
